# Console-Library-System

./: .gitignore  CMakeLists.txt
data/: database.txt
include/: Book.h  Inventory.h
src/: Book.cpp  Inventory.cpp  main.cpp
